infra/gcp/k8s/development/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: development
spec:
  selector:
    app: backend
  ports:
  - port: 8001
    targetPort: 8001
  type: ClusterIP
